--- a/course_1_algorithmic_toolbox/CMakeLists.txt
+++ b/course_1_algorithmic_toolbox/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_subdirectory(week1_programming_challenges)
 add_subdirectory(week2_algorithmic_warmup)
+add_subdirectory(week3_greedy_algorithms)
