--- a/course_1_algorithmic_toolbox/CMakeLists.txt
+++ b/course_1_algorithmic_toolbox/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(week1_programming_challenges)
 add_subdirectory(week2_algorithmic_warmup)
 add_subdirectory(week3_greedy_algorithms)
 add_subdirectory(week4_divide_and_conquer)
+add_subdirectory(week5_dynamic_programming1)
