--- a/course_2_data_structures/CMakeLists.txt
+++ b/course_2_data_structures/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_subdirectory(week1_basic_data_structures)
 add_subdirectory(week3_priority_queues_and_disjoint_sets)
+add_subdirectory(week4_hash_tables)
